# bge-inference-server

./: .pre-commit-config.yaml  bentofile.yaml  pyproject.toml  requirements.txt  service.py
