[project]
name = "bge-inference-server"
version = "0.1.0"
description = "BGE Inference Server"
readme = "README.md"
authors = [{ name = "Jeremy-Hibiki", email = "JeremyJiang430@outlook.com" }]
requires-python = ">=3.10,<3.13"
dependencies = ["bentoml>=1.3.18", "flagembedding>=1.3.3", "pydantic>=2.10.4"]

[dependency-groups]
dev = [
  "codespell==2.3.0",
  "mypy==1.14.1",
  "pre-commit==4.0.1",
  "ruff==0.8.4",
  "setuptools>=75.6.0",
]

[tool.uv]
index-strategy = "unsafe-best-match"

[[tool.uv.index]]
name = "mirror"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
triton = { index = "pytorch" }

[tool.uv.pip]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"
extra-index-url = ["https://download.pytorch.org/whl/cu124"]

[tool.ruff]
line-length = 119
indent-width = 4
target-version = "py310"
extend-exclude = ["*.pyi"]

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # flake8-bugbear
  "B",
  # flake8-future-annotations
  "FA",
  # flake8-simplify
  "SIM",
  # flake8-logging
  "LOG",
  # flake8-print
  "T20",
  # isort
  "I",
  # pyupgrade
  "UP",
  # fastapi
  "FAST",
]
ignore = [
  "COM812",
  "COM819",
  "D100",
  "D203",
  "D213",
  "D300",
  "E111",
  "E114",
  "E117",
  "E501",
  "ISC001",
  "ISC002",
  "Q000",
  "Q001",
  "Q002",
  "Q003",
  "W191",
  "SIM300",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/test/**.py" = ["LOG", "T20"]
"**/test_*.py" = ["LOG", "T20"]

[tool.ruff.lint.isort]
extra-standard-library = ["typing_extensions"]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.codespell]
quiet-level = 0
check-filenames = true
skip = "*.log,*.csv,*.html,*.json,*.jsonl,*.pdf,*.txt,*.ipynb,*.pyc"

[tool.mypy]
plugins = ["pydantic.mypy"]
disable_error_code = "import-untyped"

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true
